test/good/sets/set06.px

class A def
    x: Int

a = A()
print {a, A(), A(), a, A()}.length
