test/bad/classes/default01.px

class A def
    x: Int

default(A)
